Try fix on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -8,7 +8,7 @@ header {
 	background: #000000e5;
 	background: linear-gradient(to top, rgba(0, 0, 0, 0.95) 30%, rgba(0, 0, 0, 0.5) 100%);
 	@media @smartphones {
-		height: 100%;
+		min-height: 100%;
 	}
 	>h1 {
 		color: white;
